modified the secret key in the settings file

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 EMAIL_USER=taixonj@gmail.com
 EMAIL_PASSWORD=kjcp qyik rswy yrnr
+DJANGO_SECRET_KEY=8sk9tur@=apzcr!t8yj2hjk2akugqn3&43&1p+_sv8pqh@f^$-
